# cmake_sample

./: CMakeLists.txt  hello.cpp  hello2.cpp
subproject1/: CMakeLists.txt
subproject1/include/: header1.h
subproject1/src/: source1.cpp
